--- a/src/components/Header/VideoSection.scss
+++ b/src/components/Header/VideoSection.scss
@@ -113,6 +113,10 @@
       flex-direction: column;
       align-items: flex-start;
       gap: 0px;
+      
+      @media (max-width: 1023px) {
+        margin: 0;
+      }
     }
 
     .video.title {
